--- a/DataMining_Project1.ipynb
+++ b/DataMining_Project1.ipynb
@@ -6,7 +6,7 @@
       "name": "DataMining_Project1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMr1Jg0Ma9Sisd8Z1KgFVHH"
+      "authorship_tag": "ABX9TyNml90ItQ2DqismKIruFCBR"
     },
     "kernelspec": {
       "name": "python3",
@@ -24,145 +24,114 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2zVf8oDSopUo",
-        "outputId": "ac895046-bde2-4073-e458-e1dd656b5d21"
+        "outputId": "77d561d9-4874-45e5-cd23-7a22e2884e13"
       },
       "source": [
         "import matplotlib\n",
         "import sys\n",
         "import pandas\n",
         "import random\n",
-        "\n",
-        "class Data:\n",
-        "    def __init__(self,data,columns):\n",
-        "        self.data=pandas.read_csv('/content/project1_data/netflix_titles.csv')\n",
-        "        self.data.columns=['show_id','type','title','director','cast','country','date_added','release year','rating','duration','listed_in','description']\n",
-        "        self.data=data.drop(labels=0,axis=0)\n",
-        "        self.data.head(5)\n",
-        "\n",
-        "    \n",
-        "    \"\"\"1. Ποιό είδος υπερτερεί, οι ταινίες ή οι σειρές ;\"\"\"\n",
-        "\n",
-        "    def q1():\n",
-        "        print(\"Ερώτημα 1:\")\n",
-        "        num_movies=data.loc[data['type']=='Movie'].count().max()\n",
-        "        num_shows=data.loc[data['type']=='TV Show'].count().max()\n",
-        "        if num_movies>num_shows:\n",
-        "            print('Υπερτερούν οι ταινίες με αριθμό:', num_movies)\n",
-        "        else:\n",
-        "            print('Υπερτερούν οι σειρές με αριθμό', num_show)\n",
+        "from google.colab import drive\n",
         "\n",
         "\n",
-        "    \"\"\"2. Τα τελευταία χρόνια το netflix επενδύει περισσότερο σε ταινίες ή σε σειρές;\"\"\"\n",
+        "# drive.mount('/content/gdrive')\n",
+        "data=pandas.read_csv('/content/gdrive/MyDrive/DataMining/Project1/data_sample/netflix_titles.csv')\n",
+        "data.columns=['show_id','type','title','director','cast','country','date_added','release year','rating','duration','listed_in','description']\n",
+        "data=data.drop(labels=0,axis=0)\n",
+        "data.head(5)\n",
         "\n",
-        "    def q2():\n",
-        "        print(\"Ερώτημα 2:\")\n",
+        "\"\"\"1. Ποιό είδος υπερτερεί, οι ταινίες ή οι σειρές ;\"\"\"\n",
         "\n",
+        "print(\"Ερώτημα 1:\")\n",
+        "num_movies=data.loc[data['type']=='Movie'].count().max()\n",
+        "num_shows=data.loc[data['type']=='TV Show'].count().max()\n",
+        "if num_movies>num_shows:\n",
+        "    print('Υπερτερούν οι ταινίες με αριθμό:', num_movies)\n",
+        "else:\n",
+        "    print('Υπερτερούν οι σειρές με αριθμό', num_show)\n",
         "\n",
-        "    \"\"\"3. Ποιά χώρα έχει το περισσότερο περιεχόμενο;\"\"\"\n",
+        "\"\"\"2. Τα τελευταία χρόνια το netflix επενδύει περισσότερο σε ταινίες ή σε σειρές;\"\"\"\n",
         "\n",
-        "    def q3():\n",
-        "        print(\"Ερώτημα 3:\")\n",
-        "        country=data['country'].value_counts()[:1].index.tolist()\n",
-        "        output=''.join(country)\n",
-        "        print(\"Η χώρα με το περισσότερο περιεχόμενο είναι: \",output)\n",
-        "\n",
-        "\n",
-        "    \"\"\"4. Τι είδους περιεχόμενο έχει κάθε χώρα;\"\"\"\n",
-        "\n",
-        "    def q4():\n",
-        "        print(\"Ερώτημα 4:\")\n",
-        "        # countries=set()\n",
-        "        # for country in data['country']:\n",
-        "        #     countries.add(country)\n",
-        "        # print(countries)\n",
-        "\n",
-        "        # countries=set()\n",
-        "        # tok=data['country'].astype(str).str.split(\",\")\n",
-        "        # print(tok)\n",
-        "\n",
-        "        # countries=data['country'].astype(str).str.split(\",\").tolist()\n",
-        "        # print(countries)\n",
-        "\n",
-        "        # countries=data['country'].astype(str).tolist()\n",
-        "        # for c in countries:\n",
-        "        #     print(c)\n",
+        "print(\"Ερώτημα 2:\")\n",
         "\n",
         "\n",
-        "        \n",
-        "            \n",
+        "\"\"\"3. Ποιά χώρα έχει το περισσότερο περιεχόμενο;\"\"\"\n",
+        "\n",
+        "print(\"Ερώτημα 3:\")\n",
+        "country=data['country'].value_counts()[:1].index.tolist()\n",
+        "output=''.join(country)\n",
+        "print(\"Η χώρα με το περισσότερο περιεχόμενο είναι: \",output)\n",
         "\n",
         "\n",
-        "    \"\"\"5. Ετοιμάστε γραφήματα που δειχνουν τους ηθοποιούς με τις περισσότερες ταινίες σε κάθε χώρα.\n",
-        "     Κάντε το ίδιο και για τις σειρές\"\"\"\n",
+        "\"\"\"4. Τι είδους περιεχόμενο έχει κάθε χώρα;\"\"\"\n",
         "\n",
-        "    def q5():\n",
-        "        print(\"Ερώτημα 5:\")\n",
+        "print(\"Ερώτημα 4:\")\n",
+        "# countries=set()\n",
+        "# for country in data['country']:\n",
+        "#     countries.add(country)\n",
+        "# print(countries)\n",
         "\n",
+        "# countries=set()\n",
+        "# tok=data['country'].astype(str).str.split(\",\")\n",
+        "# print(tok)\n",
         "\n",
-        "    \"\"\"6. Το netflix υποστηρίζει ότι παρέχει πλούσιο περιεχόμενο για όλες τις ηλικίες.\n",
-        "    Αληθεύει αυτό; Φτιάξτε ένα γράφημα το οποίο συγκεντρώνει το πλήθος των\n",
-        "    ταινιων ανάλογα με την προτεινόμενη ηλικία (αναφερόμαστε στη στήλη rating). Τα\n",
-        "    όρια καθορίζονται σύμφωνα με τον παρακάτω πίνακα. Κάντε το ίδιο γράφημα και\n",
-        "    για τις σειρές.\"\"\"\n",
+        "# countries=data['country'].astype(str).str.split(\",\").tolist()\n",
+        "# print(countries)\n",
         "\n",
-        "    def q6():\n",
-        "        print(\"Ερώτημα 6:\")\n",
-        "\n",
-        "\n",
-        "    \"\"\"7. Αν ένας παραγωγός ήθελε να έχει υψηλή ακροαματικότητα, σκέφτεται ότι θα ήταν\n",
-        "    ίσως καλύτερα να βγάλει την ταινία του σε μία εποχή που δεν υπάρχει\n",
-        "    ανταγωνισμός. Κάντε ένα γράφημα με το περιεχόμενο που προστίθεται ανά μήνα\n",
-        "    για να τον βοηθήσετε να επιλέξει τη σωστή χρονική περίοδο. \"\"\"\n",
-        "\n",
-        "    def q7():\n",
-        "        print(\"Ερώτημα 7:\")\n",
+        "# countries=data['country'].astype(str).tolist()\n",
+        "# for c in countries:\n",
+        "#     print(c)\n",
         "\n",
         "\n",
-        "    \"\"\"8. Ετοιμάστε ένα γράφημα που παρουσιάζει συγκεντρωτικά τα είδη του περιεχομένου\n",
-        "    (αναφερόμαστε στη στήλη listed_in).\"\"\"\n",
+        "\"\"\"5. Ετοιμάστε γραφήματα που δειχνουν τους ηθοποιούς με τις περισσότερες ταινίες σε κάθε χώρα.\n",
+        "    Κάντε το ίδιο και για τις σειρές\"\"\"\n",
         "\n",
-        "    def q8():\n",
-        "        print(\"Ερώτημα 8:\")\n",
-        "\n",
-        "\n",
-        "    \"\"\"9. Μελετηστε τους σκηνοθέτες ανά χώρα και παρουσιάστε σχετικά γραφήματα.\"\"\"\n",
-        "\n",
-        "    def q9():\n",
-        "        print(\"Ερώτημα 9:\")\n",
-        "\n",
-        "\n",
-        "    \"\"\"10. Μελετήστε τις σειρές και παρουσιάστε ένα γράφημα που τις δείχνει ανάλογα με το\n",
-        "    αριθμό των seasons. \"\"\"\n",
-        "\n",
-        "    def q10():\n",
-        "        print(\"Ερώτημα 10:\")\n",
-        "\n",
-        "\n",
-        "    \"\"\"11. Αξιοποιήστε τα υπόλοιπα αρχεία της εργασίας για να απαντήσετε στο ερώτημα:\n",
-        "    Ποιές είναι οι ταινίες με την πιο υψηλή βαθμολογία; Θα χρειαστεί να συννενώσετε\n",
-        "    κατάλληλα τα αρχεία που σας δίνονται ώστε να κρατήσετε τις ταινίες του netflix για\n",
-        "    τις οποίες υπάρχουν ratings στο IMBD.\"\"\"\n",
-        "\n",
-        "    def q11():\n",
-        "        print(\"Ερώτημα 11:\")\n",
+        "print(\"Ερώτημα 5:\")\n",
         "\n",
         "\n",
         "\n",
-        "if __name__==\"__main__\":\n",
-        "    Data.q1()\n",
-        "    Data.q2()\n",
-        "    Data.q3()\n",
-        "    Data.q4()\n",
-        "    Data.q5()\n",
-        "    Data.q6()\n",
-        "    Data.q7()\n",
-        "    Data.q8()\n",
-        "    Data.q9()\n",
-        "    Data.q10()\n",
-        "    Data.q11()\n",
-        "    "
+        "\"\"\"6. Το netflix υποστηρίζει ότι παρέχει πλούσιο περιεχόμενο για όλες τις ηλικίες.\n",
+        "Αληθεύει αυτό; Φτιάξτε ένα γράφημα το οποίο συγκεντρώνει το πλήθος των\n",
+        "ταινιων ανάλογα με την προτεινόμενη ηλικία (αναφερόμαστε στη στήλη rating). Τα\n",
+        "όρια καθορίζονται σύμφωνα με τον παρακάτω πίνακα. Κάντε το ίδιο γράφημα και\n",
+        "για τις σειρές.\"\"\"\n",
+        "\n",
+        "print(\"Ερώτημα 6:\")\n",
+        "\n",
+        "\n",
+        "\"\"\"7. Αν ένας παραγωγός ήθελε να έχει υψηλή ακροαματικότητα, σκέφτεται ότι θα ήταν\n",
+        "ίσως καλύτερα να βγάλει την ταινία του σε μία εποχή που δεν υπάρχει\n",
+        "ανταγωνισμός. Κάντε ένα γράφημα με το περιεχόμενο που προστίθεται ανά μήνα\n",
+        "για να τον βοηθήσετε να επιλέξει τη σωστή χρονική περίοδο. \"\"\"\n",
+        "\n",
+        "print(\"Ερώτημα 7:\")\n",
+        "\n",
+        "\n",
+        "\"\"\"8. Ετοιμάστε ένα γράφημα που παρουσιάζει συγκεντρωτικά τα είδη του περιεχομένου\n",
+        "(αναφερόμαστε στη στήλη listed_in).\"\"\"\n",
+        "\n",
+        "print(\"Ερώτημα 8:\")\n",
+        "\n",
+        "\n",
+        "\"\"\"9. Μελετηστε τους σκηνοθέτες ανά χώρα και παρουσιάστε σχετικά γραφήματα.\"\"\"\n",
+        "\n",
+        "print(\"Ερώτημα 9:\")\n",
+        "\n",
+        "\n",
+        "\"\"\"10. Μελετήστε τις σειρές και παρουσιάστε ένα γράφημα που τις δείχνει ανάλογα με το\n",
+        "αριθμό των seasons. \"\"\"\n",
+        "\n",
+        "print(\"Ερώτημα 10:\")\n",
+        "\n",
+        "\n",
+        "\"\"\"11. Αξιοποιήστε τα υπόλοιπα αρχεία της εργασίας για να απαντήσετε στο ερώτημα:\n",
+        "Ποιές είναι οι ταινίες με την πιο υψηλή βαθμολογία; Θα χρειαστεί να συννενώσετε\n",
+        "κατάλληλα τα αρχεία που σας δίνονται ώστε να κρατήσετε τις ταινίες του netflix για\n",
+        "τις οποίες υπάρχουν ratings στο IMBD.\"\"\"\n",
+        "\n",
+        "print(\"Ερώτημα 11:\")\n"
       ],
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
