--- a/DataMining_Project1.ipynb
+++ b/DataMining_Project1.ipynb
@@ -6,7 +6,7 @@
       "name": "DataMining_Project1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOSjqUuG/em3pKrO/LKosQq"
+      "authorship_tag": "ABX9TyODsBgSBWdyhTld08yMlx2Y"
     },
     "kernelspec": {
       "name": "python3",
@@ -34,23 +34,23 @@
           "height": 204
         },
         "id": "YHCLVdbJW4Q5",
-        "outputId": "090c7724-125c-4575-f6b8-d7ede9d84d13"
+        "outputId": "a4c04e32-3130-4dd7-ff7f-d9bc2d72bfad"
       },
       "source": [
         "import matplotlib\n",
         "import sys\n",
-        "import pandas\n",
+        "import pandas as pd\n",
         "import random\n",
+        "import numpy as np\n",
         "from google.colab import drive\n",
         "\n",
-        "\n",
         "# drive.mount('/content/gdrive')\n",
-        "data=pandas.read_csv('/content/gdrive/MyDrive/DataMining/Project1/data_sample/netflix_titles.csv')\n",
-        "data.columns=['show_id','type','title','director','cast','country','date_added','release year','rating','duration','listed_in','description']\n",
-        "data=data.drop(labels=0,axis=0)\n",
-        "data.head(5)"
+        "netflix=pd.read_csv('/content/gdrive/MyDrive/DataMining/Project1/data_sample/netflix_titles.csv')\n",
+        "netflix.columns=['show_id','type','title','director','cast','country','date_added','release year','rating','duration','listed_in','description']\n",
+        "netflix=netflix.drop(labels=0,axis=0)\n",
+        "netflix.head(5)"
       ],
-      "execution_count": 39,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -182,7 +182,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 39
+          "execution_count": 64
         }
       ]
     },
@@ -203,17 +203,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JudMqLQiXRvd",
-        "outputId": "07611e2d-f9c8-4ad7-9bc3-be52f7eede2a"
+        "outputId": "6e2cbd47-9668-409d-a747-180cfca969f2"
       },
       "source": [
-        "num_movies=data.loc[data['type']=='Movie'].count().max()\n",
-        "num_shows=data.loc[data['type']=='TV Show'].count().max()\n",
+        "num_movies=netflix.loc[netflix['type']=='Movie'].count().max()\n",
+        "num_shows=netflix.loc[netflix['type']=='TV Show'].count().max()\n",
         "if num_movies>num_shows:\n",
         "    print('Υπερτερούν οι ταινίες με αριθμό:', num_movies)\n",
         "else:\n",
         "    print('Υπερτερούν οι σειρές με αριθμό', num_show)"
       ],
-      "execution_count": 40,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,12 +241,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q3iJ7OAGXlvU",
-        "outputId": "0a30f4c2-f48e-4b56-b1a0-8c5416bb0f85"
+        "outputId": "2b045504-c1ae-4db4-c242-537d4a12b4c4"
       },
       "source": [
         "print(\"Ερώτημα 2:\")"
       ],
-      "execution_count": 41,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,14 +274,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DysFkCsrX2XU",
-        "outputId": "58b3aa6e-fa21-40d3-dedd-46c92291ee09"
+        "outputId": "aefea661-dc36-4ae2-a555-7a19bdeb7845"
       },
       "source": [
-        "country=data['country'].value_counts()[:1].index.tolist()\n",
-        "output=''.join(country)\n",
-        "print(\"Η χώρα με το περισσότερο περιεχόμενο είναι: \",output)"
+        "print(\"Η χώρα με το περισσότερο περιεχόμενο είναι: \", netflix['country'].value_counts().index[0])"
       ],
-      "execution_count": 42,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
@@ -309,26 +307,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aoYDvwUBYOP2",
-        "outputId": "ce890f05-146a-448e-f6e2-974d0e21edbc"
+        "outputId": "512f9cad-bc38-41e7-ffd1-bde0bc841572"
       },
       "source": [
         "# countries=set()\n",
-        "# for country in data['country']:\n",
+        "# for country in netflix['country']:\n",
         "#     countries.add(country)\n",
         "# print(countries)\n",
         "\n",
         "countries=set()\n",
-        "tok=data['country'].astype(str).str.split(\",\")\n",
+        "tok=netflix['country'].astype(str).str.split(\",\")\n",
         "print(tok)\n",
         "\n",
-        "# countries=data['country'].astype(str).str.split(\",\").tolist()\n",
+        "# countries=netflix['country'].astype(str).str.split(\",\").tolist()\n",
         "# print(countries)\n",
         "\n",
-        "# countries=data['country'].astype(str).tolist()\n",
+        "# countries=netflix['country'].astype(str).tolist()\n",
         "# for c in countries:\n",
-        "#     print(c)"
+        "#     print(c)\n",
+        "\n",
+        "\n"
       ],
-      "execution_count": 45,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "stream",
