katevase to kai allakse tou onoma me to diko sou torino gia na doulevoume ston idio kodika alla me diaforetika arxeia

--- a/DataMining_Project1.ipynb
+++ b/DataMining_Project1.ipynb
@@ -6,7 +6,7 @@
       "name": "DataMining_Project1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMgX3nU6cN03GfHkaF/GsUx"
+      "authorship_tag": "ABX9TyP6YkqWs0fmM7H2sGlCB5/r"
     },
     "kernelspec": {
       "name": "python3",
@@ -37,9 +37,9 @@
         "import pandas as pd\n",
         "import random\n",
         "import numpy as np\n",
-        "from google.colab import drive\n"
+        "from google.colab import drive"
       ],
-      "execution_count": 90,
+      "execution_count": 117,
       "outputs": []
     },
     {
@@ -59,13 +59,13 @@
           "height": 289
         },
         "id": "vIoT2jbSm-yQ",
-        "outputId": "bf485c3e-aa94-4c42-fa53-9c176c9d5d47"
+        "outputId": "1149dd63-e880-4016-be9e-81d792df7159"
       },
       "source": [
         "netflix=pd.read_csv('/content/gdrive/MyDrive/DataMining/Project1/data_sample/netflix_titles.csv')\n",
         "netflix.head(5)"
       ],
-      "execution_count": 93,
+      "execution_count": 118,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -197,7 +197,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 93
+          "execution_count": 118
         }
       ]
     },
@@ -218,13 +218,13 @@
           "height": 666
         },
         "id": "I3ZiQGQ5nOGs",
-        "outputId": "b4711769-0aad-4f99-c629-32af0fefa50b"
+        "outputId": "8439a497-a926-4b5b-d4b3-cb1a1da41845"
       },
       "source": [
         "imdb_movies=pd.read_csv('/content/gdrive/MyDrive/DataMining/Project1/data_sample/imdb_movies.csv',low_memory=False)\n",
         "imdb_movies.head(5)"
       ],
-      "execution_count": 89,
+      "execution_count": 119,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -416,7 +416,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 89
+          "execution_count": 119
         }
       ]
     },
@@ -437,13 +437,13 @@
           "height": 666
         },
         "id": "KwxQVpYvnhXA",
-        "outputId": "6ef567d5-0c60-4078-d294-e9f644fa92a5"
+        "outputId": "272544bc-97dd-4f12-95fe-b9807c289929"
       },
       "source": [
         "imdb_ratings=pd.read_csv('/content/gdrive/MyDrive/DataMining/Project1/data_sample/imdb_movies.csv',low_memory=False)\n",
         "imdb_ratings.head(5)"
       ],
-      "execution_count": 91,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -635,7 +635,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 91
+          "execution_count": 120
         }
       ]
     },
@@ -656,7 +656,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JudMqLQiXRvd",
-        "outputId": "6e2cbd47-9668-409d-a747-180cfca969f2"
+        "outputId": "4eea8678-c2eb-4f15-93f7-bd01ad6a55ab"
       },
       "source": [
         "num_movies=netflix.loc[netflix['type']=='Movie'].count().max()\n",
@@ -666,7 +666,7 @@
         "else:\n",
         "    print('Υπερτερούν οι σειρές με αριθμό', num_show)"
       ],
-      "execution_count": 65,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "stream",
@@ -694,12 +694,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q3iJ7OAGXlvU",
-        "outputId": "2b045504-c1ae-4db4-c242-537d4a12b4c4"
+        "outputId": "2cb5aec7-89bd-49cb-ccd2-93aeb79e30f6"
       },
       "source": [
         "print(\"Ερώτημα 2:\")"
       ],
-      "execution_count": 57,
+      "execution_count": 122,
       "outputs": [
         {
           "output_type": "stream",
@@ -727,17 +727,37 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DysFkCsrX2XU",
-        "outputId": "a6dcf3c1-5228-484a-e301-aa9e5fc831bb"
+        "outputId": "e2f2512a-d8eb-4de9-d90f-5c3d978e1989"
       },
       "source": [
-        "print(\"Η χώρα με το περισσότερο περιεχόμενο είναι: \", netflix['country'].value_counts().index[0])"
+        "row_accumulator = []\n",
+        "\n",
+        "def split_list_to_rows(row):\n",
+        "    split_row = str(row['country']).split(\", \")\n",
+        "    if isinstance(split_row, list):\n",
+        "        for s in split_row:\n",
+        "            if s!=\"nan\":\n",
+        "                new_row = row.to_dict()\n",
+        "                new_row['country'] = str(s)\n",
+        "                row_accumulator.append(new_row)\n",
+        "    else:\n",
+        "        if split_row!=\"nan\":\n",
+        "            new_row = row.to_dict()\n",
+        "            new_row['country'] = str(split_row)\n",
+        "            row_accumulator.append(new_row)\n",
+        "\n",
+        "netflix.apply(split_list_to_rows, axis=1)\n",
+        "new_df = pd.DataFrame(row_accumulator)\n",
+        "top_country=new_df['country'].value_counts(dropna=True).index[0]\n",
+        "top_value=new_df['country'].value_counts(dropna=True)[0]\n",
+        "print(\"Η χώρα με το περισσότερο περιεχόμενο είναι:\",top_country,\"με:\",top_value)"
       ],
-      "execution_count": 74,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Η χώρα με το περισσότερο περιεχόμενο είναι:  United States\n"
+            "Η χώρα με το περισσότερο περιεχόμενο είναι: United States με: 3296\n"
           ],
           "name": "stdout"
         }
@@ -760,7 +780,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aoYDvwUBYOP2",
-        "outputId": "b63b67b2-20d8-43bd-c39f-2f00250ab0a6"
+        "outputId": "18121422-e8da-4ece-c041-18df2692309d"
       },
       "source": [
         "# countries=set()\n",
@@ -781,23 +801,23 @@
         "\n",
         "\n"
       ],
-      "execution_count": 75,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "0                                                [Brazil]\n",
             "1                                                [Mexico]\n",
             "2                                             [Singapore]\n",
             "3                                         [United States]\n",
             "4                                         [United States]\n",
-            "5                                                [Turkey]\n",
             "                              ...                        \n",
             "7782    [Sweden,  Czech Republic,  United Kingdom,  De...\n",
             "7783                                              [India]\n",
             "7784                                                [nan]\n",
             "7785                                          [Australia]\n",
             "7786            [United Kingdom,  Canada,  United States]\n",
-            "Name: country, Length: 7786, dtype: object\n"
+            "Name: country, Length: 7787, dtype: object\n"
           ],
           "name": "stdout"
         }
